--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.22.5",
+    "axios": "^0.27.2",
+    "random": "^3.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
+    "react-responsive": "^9.0.0-beta.8",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^4.2.21",
+    "react-use-scroll-snap": "^0.0.4",
+    "sass": "^1.52.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
