--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vinhhao-truong.github.io/portfolio-react/",
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.5",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "random": "^3.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -26,6 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
